@@ -3,6 +3,15 @@
 	* R/Attributes.R: better handle pre-existing RcppExports.cpp,
 	RcppExports.R when calling compileAttributes()
 
+2019-02-09  Ralf Stubner  <ralf.stubner@daqana.com>
+
+	* Rcpp-modules.Rmd: Added example for .factory
+
+2019-01-31  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/Rcpp/protection/Shelter.h (Rcpp): Only increase
+	nprotected count if object is not NULL (suggested by Stepan Sindelar)
+
 2018-12-26  Zhuoer Dong  <dongzhuoer@mail.nankai.edu.cn>
 
 	* vignettes/Rcpp-quickref.Rmd: Fix three bugs: use `Named()`, define
